--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,14 @@
 	"name": "eleyjambaro/ci-restful-blog-app",
 	"type": "project",
 	"require": {
-		"php": ">=5.3.7"
+		"php": ">=5.3.7",
+		"vlucas/phpdotenv": "^5.3"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
 	},
 	"require-dev": {
-		"mikey179/vfsStream": "1.1.*",
+		"mikey179/vfsstream": "1.1.*",
 		"phpunit/phpunit": "4.* || 5.*"
 	}
 }
