--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ DB_HOSTNAME="your-hostname-probably-localhost"
 DB_USERNAME="your-database-username"
 DB_PASSWORD="your-database-password"
 DB_NAME="your-database-name"
+JWT_SECRET_KEY="secret-key-for-jwt-auth"
